--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
     "next": "13.1.0",
+    "next-sanity": "^4.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "rxjs": "^7.8.0",
+    "rxjs-compat": "^6.6.7"
   }
 }
