--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-sanity": "^4.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-portable-text": "^0.6.0",
     "rxjs": "^7.8.0",
     "rxjs-compat": "^6.6.7"
   }
