--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@formspree/react": "^2.4.1",
     "@next/font": "13.1.0",
+    "@portabletext/react": "^2.0.1",
+    "@sanity/image-url": "^1.0.2",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
+    "groq": "^3.2.5",
     "next": "13.1.0",
     "next-sanity": "^4.0.6",
     "react": "18.2.0",
