--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "react-portable-text": "^0.6.0",
     "rxjs": "^7.8.0",
     "rxjs-compat": "^6.6.7"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.7"
   }
 }
