--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/font": "13.1.0",
     "@portabletext/react": "^2.0.1",
     "@sanity/image-url": "^1.0.2",
+    "axios": "^1.3.4",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
     "groq": "^3.2.5",
