--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.1.0",
     "next-sanity": "^4.0.6",
     "react": "18.2.0",
+    "react-bootstrap-icons": "^1.10.2",
     "react-dom": "18.2.0",
     "react-portable-text": "^0.6.0",
     "rxjs": "^7.8.0",
