--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@formspree/react": "^2.4.1",
     "@next/font": "13.1.0",
     "@portabletext/react": "^2.0.1",
+    "@sanity/client": "^6.7.0",
     "@sanity/image-url": "^1.0.2",
     "axios": "^1.3.4",
+    "dotenv": "^16.3.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
     "groq": "^3.2.5",
